--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@pylades/interface",
+  "name": "@pyladesprotocol/interface",
   "description": "Pylades Interface",
   "homepage": ".",
   "private": true,
