--- a/package.json
+++ b/package.json
@@ -28,13 +28,13 @@
     "@types/wcag-contrast": "^3.0.0",
     "@typescript-eslint/eslint-plugin": "^2.31.0",
     "@typescript-eslint/parser": "^2.31.0",
-    "@uniswap/governance": "^1.0.2",
-    "@uniswap/liquidity-staker": "^1.0.2",
-    "@uniswap/merkle-distributor": "1.0.1",
-    "@uniswap/sdk": "3.0.3",
-    "@uniswap/token-lists": "^1.0.0-beta.19",
-    "@uniswap/v2-core": "1.0.0",
-    "@uniswap/v2-periphery": "^1.1.0-beta.0",
+    "@pyladesprotocol/governance": "^1.0.0",
+    "@pyladesprotocol/liquidity-staker": "^1.0.0",
+    "@pyladesprotocol/merkle-distributor": "1.0.0",
+    "@pyladesprotocol/sdk": "^3.0.0",
+    "@pyladesprotocol/token-lists": "^1.0.0",
+    "@pyladesprotocol/core": "^1.0.0",
+    "@pyladesprotocol/periphery": "^1.0.0",
     "@web3-react/core": "^6.0.9",
     "@web3-react/fortmatic-connector": "^6.0.9",
     "@web3-react/injected-connector": "^6.0.7",
